# Z00NI

./: .gitignore  README.md  configuration.json  main.py  pyproject.toml
source/Bot/: bot.py
source/Bot/Assets/: extloader.py
source/Bot/Helper/: checks.py  keep_alive.py  presence.py
source/Bot/commands/: developer.py  util.py
source/Bot/commands/Assets/: badgefinder.py  dev.py  emotes.py
source/Changelogs/: V0.1.0.md  V0.1.1.md  V0.1.2.md  V0.1.3.md  V0.1.4.md
source/Helper/: checks.py  keep_alive.py
src/: __launcher__.py
src/cogs/: commander.py  fun.py  info.py  logger.py  moderation.py
src/functions/: commanderfunctions.py
src/helper/: checks.py  keep_alive.py  sentryio.py
