[tool.poetry]
name = "Z00NI"
version = "0.1.0"
description = ""
authors = ["Simplex <kontakt.simplex@outlook.de>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0-alpha.6"
asyncpg = "^0.25.0"
Flask = "^2.0.2"
sentry-sdk = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
